--- a/templates/home.html
+++ b/templates/home.html
@@ -1,20 +1,22 @@
 <!DOCTYPE html>
 <html lang="en">
-  <head>
-    <meta charset="UTF-8">
-    <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <meta http-equiv="X-UA-Compatible" content="ie=edge">
-    <title>My Website</title>
-    <link rel="stylesheet" href="./style.css">
-    <link rel="icon" href="./favicon.ico" type="image/x-icon">
-  </head>
-  <body>
-    <h1>Hello</h1>  
+<head>
+  <meta charset="UTF-8">
+  <meta name="viewport" content="width=device-width, initial-scale=1.0">
+  <title>My Website</title>
+  <link rel="stylesheet" href="./style.css">
+  <link rel="icon" href="./favicon.ico" type="image/x-icon">
+  <link href="{{ url_for('static', filename='css/home.css') }}" rel="stylesheet">
+  <link href="{{ url_for('static', filename='css/style2.css') }}" rel="stylesheet">
+</head>
+<body>
+  <div class="container">
+    <h1>Welcome</h1>  
 
-    <a href="{{url_for('login')}}">Login Page</a>
-    <br>
-    <a href="{{url_for('register')}}">register Page</a>
-
-    
-  </body>
+    <div class="links">
+      <a href="{{url_for('login')}}">Login Page</a>
+      <a href="{{url_for('register')}}">Register Page</a>
+    </div>
+  </div>
+</body>
 </html>
