--- a/templates/login.html
+++ b/templates/login.html
@@ -1,25 +1,33 @@
 <!DOCTYPE html>
 <html lang="en">
-  <head>
-    <meta charset="UTF-8">
-    <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <meta http-equiv="X-UA-Compatible" content="ie=edge">
-    <title>Login</title>
-    <link rel="stylesheet" href="./style.css">
-    <link rel="icon" href="./favicon.ico" type="image/x-icon">
-  </head>
-  <body>
-    <h1>Login Page</h1>  
+<head>
+  <meta charset="UTF-8">
+  <meta name="viewport" content="width=device-width, initial-scale=1.0">
+  <title>Login</title>
+  <link rel="stylesheet" href="./style.css">
+  <link rel="icon" href="./favicon.ico" type="image/x-icon">
+  <link href="{{ url_for('static', filename='css/login.css') }}" rel="stylesheet">
+  <link href="{{ url_for('static', filename='css/style2.css') }}" rel="stylesheet">
+</head>
+<body>
+  <div class="container">
+    <h1>Login</h1>  
     
     <form method="POST" action="">
-        {{ form.hidden_tag () }}
-        {{ form.username }}
-        {{ form.password }}
-        {{ form.submit }}
+      {{ form.hidden_tag() }}
+      
+      <label for="username">Username</label>
+      {{ form.username }}
+      
+      <label for="password">Password</label>
+      {{ form.password }}
+      
+      {{ form.submit }}
     </form>
 
-    <a href="{{url_for('register')}}">Don't have an account? Sign Up!</a>
-
-
-  </body>
+    <p>
+      <a href="{{url_for('register')}}">Don't have an account? Sign Up!</a>
+    </p>
+  </div>
+</body>
 </html>
