--- a/templates/login.html
+++ b/templates/login.html
@@ -8,11 +8,40 @@
   <link rel="icon" href="./favicon.ico" type="image/x-icon">
   <link href="{{ url_for('static', filename='css/login.css') }}" rel="stylesheet">
   <link href="{{ url_for('static', filename='css/style2.css') }}" rel="stylesheet">
+  <style>
+    .alert {
+      padding: 15px;
+      margin-bottom: 20px;
+      border: 1px solid transparent;
+      border-radius: 4px;
+      font-size: 16px;
+      text-align: center;
+    }
+    
+    .alert-info {
+      color: #0c5460;
+      background-color: #d1ecf1;
+      border-color: #bee5eb;
+    }
+  </style>
 </head>
 <body>
   <div class="container">
     <h1>Login</h1>  
     
+    <!-- Flash Messages Section -->
+    {% with messages = get_flashed_messages(with_categories=true) %}
+      {% if messages %}
+        {% for category, message in messages %}
+          {% if category == 'registerSuccess' %}
+            <div class="alert alert-info" role="alert">
+              {{ message }}
+            </div>
+          {% endif %}
+        {% endfor %}
+      {% endif %}
+    {% endwith %}
+
     <form method="POST" action="">
       {{ form.hidden_tag() }}
       
@@ -26,7 +55,7 @@
     </form>
 
     <p>
-      <a href="{{url_for('register')}}">Don't have an account? Sign Up!</a>
+      <a href="{{ url_for('register') }}">Don't have an account? Sign Up!</a>
     </p>
   </div>
 </body>
